--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-flask==2.0.1
-gunicorn==20.1.0  # Adicione esta linha
+flask==2.1.0
+werkzeug==2.1.0
+gunicorn==20.1.0
 python-dotenv==0.19.0
 openai==0.27.0
