--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,7 @@ services:
   - type: web
     name: papatroco
     runtime: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip
+      pip install --force-reinstall -r requirements.txt
     startCommand: gunicorn papatroco_web:app
